--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script src="libs.js"></script>
+    <script src="BSpline.js"></script>
     <script src="test.js"></script>
-    <canvas id="myCanvas"></canvas>
-    
-    
+    <canvas id="myCanvas" style="background-color: lightblue;"></canvas>
+
+
 </body>
-</html> 
+
+</html>
