--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <script src="libs.js"></script>
     <script src="BSpline.js"></script>
-    <script src="whiteLaunchAnimation.js"></script>
+    <script src="whiteRollAnimation.js"></script>
     <canvas id="myCanvas" style="background-color: lightblue;"></canvas>
 
 
