--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
     <script src="libs.js"></script>
     <script src="BSpline.js"></script>
-    <script src="whiteRollAnimation.js"></script>
+    <!-- <script src="blueLaunchAnimation.js"></script> -->
+    <!-- <script src="blueMouthAnimation.js"></script> -->
+    <!-- <script src="blueRollAnimation.js"></script> -->
+    <!-- <script src="blueSlingshotAnimation.js"></script> -->
+    <!-- <script src="bounceAnimationAll.js"></script> -->
+    <!-- <script src="pigAnimation.js"></script> -->
+    <!-- <script src="whiteLaunchAnimation.js"></script> -->
+    <!-- <script src="whiteRollAnimation.js"></script> -->
+    <!-- <script src="whiteSlingshotAnimation.js"></script> -->
+    <script src="main.js"></script>
     <canvas id="myCanvas" style="background-color: lightblue;"></canvas>
 
 
